tests/snapshots/conformance__n_structure_number_with_trailing_garbage.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
2@
stdout --- 
<empty>
stderr --- 
error: unexpected character `@`. expected start of a json value
 --> stdin:1:2
  |
1 | 2@
  |  ^
