tests/snapshots/conformance__n_structure_object_followed_by_closing_object.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{}}
stdout --- 
<empty>
stderr --- 
error: unexpected token `}` after json finished
 --> stdin:1:3
  |
1 | {}}
  |   ^
  |
help: consider removing the trailing content (starting with `}`)
  |
1 - {}}
1 + {}
  |
