tests/snapshots/conformance__n_structure_object_unclosed_no_value.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"":
stdout --- 
<empty>
stderr --- 
error: expected json value, found no significant characters
 --> stdin:1:4
  |
1 | {"":
  |    ^
  |    |
  |    expected due to `:`
  |
help: insert a placeholder value
  |
1 | {"": "rust is a must"
  |      ++++++++++++++++
