tests/snapshots/conformance__n_structure_open_array_string.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["a"
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:1:4
  |
1 | ["a"
  | -  ^
  | |
  | expected due to `[`
  |
help: insert the missing closed delimiter `]`
  |
1 | ["a"]
  |     +
