tests/snapshots/conformance__n_structure_open_object_open_array.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{[
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `}`, found `[`
 --> stdin:1:2
  |
1 | {[
  | -^
  | |
  | expected due to `{`
