tests/snapshots/conformance__n_structure_open_object_string_with_apostrophes.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{'a'
stdout --- 
<empty>
stderr --- 
error: unexpected character `'`. expected start of a json value
 --> stdin:1:2
  |
1 | {'a'
  |  ^
